# ybinv

./: .gitignore  CMakeLists.txt  README.md  mkclass.sh
include/core/: .FiniteBiquandle.h.swp  BiquandleGenerator.h  FiniteBiquandle.h  Permutation.h  mathutils.h  printer.h  utils.h
src/: main.cpp
src/core/: .FiniteBiquandle.cpp.swp  BiquandleGenerator.cpp  FiniteBiquandle.cpp  Permutation.cpp  mathutils.cpp  printer.cpp
